Fixes #475 - Enable text wrap on the Data Dictionary page for long field names

--- a/web-services/web-root/src/main/webapp/screen.css
+++ b/web-services/web-root/src/main/webapp/screen.css
@@ -63,6 +63,7 @@ td {
 	padding-bottom: 0.15em;
 	color: #333333;
     font-size: 10pt;
+    word-wrap:break-all
 }
 
 th {
